welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: unclosed character literal
	if (90<n<100 ||190<n<200) {'true'}else{'false'}
                                        ^nearHundred:3: error: unclosed character literal
	if (90<n<100 ||190<n<200) {'true'}else{'false'}
                                                     ^nearHundred:1: error: Missing closing brace `}' assumed here
def nearHundred(n:Int): Boolean = {
^nearHundred:5: error: Missing closing brace `}' assumed here
 }
 ^